--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
+<%= render 'layouts/nav' %>
+<%= render 'layouts/carousel' %>
+<%= render 'layouts/thumbnail' %>
 <%= yield %>
+<%= render 'layouts/footer' %>
+
 
 </body>
 </html>
